test/types/range/cast-assign-init/illegal-assigns.0-5.good
illegal-assigns.chpl:11: error: assigning to a range with idxType bool from a range with idxType uint(64) without an explicit cast
